[package]
name = "fuquila-pp"
version = "0.9.5"
authors = ["MaxOhn <ohn.m@hotmail.de>", "tsunyoku <tsunyoku@gmail.com>", "Aochi <aochi@fuquila.net>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/osufuquila/fuquila-pp-rs"
description = "osu! difficulty and pp calculation for all modes"
keywords = ["osu", "pp", "stars", "async"]

[features]
default = []
async_std = ["async-std"]
async_tokio = ["tokio"]

[dependencies.async-std]
version = "1.9"
optional = true
default-features = false
features = ["async-io", "std"]

[dependencies.tokio]
version = "1.2"
optional = true
default-features = false
features = ["fs", "io-util"]

[dev-dependencies.tokio]
version = "1.2"
default-features = false
features = ["fs", "rt"]

[dev-dependencies.async-std]
version = "1.9"
default-features = true
